--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 nav ul a,
 nav .brand-logo {
   color: #444;
+  display: flex;
 }
 
 p {
@@ -54,4 +55,8 @@ p {
 
 footer.page-footer {
   margin: 0;
+}
+
+.section:nth-child(2n) {
+  background-color: rgba(0,0,0,0.1);
 }
